--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
