--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll": "^0.1.5",
     "react-lazy-load": "^4.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-player": "^2.12.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "vite": "^4.4.5"
   }
 }
